# trapfall

./: .cora.yaml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  audit.toml  docker-compose.prod.yml  docker-compose.yml
.cora/history/: 2026-06-12_ad51570_5a35bbcc21ebbd53.json  2026-06-15_3c01ff2_a5a420e9c614e57a.json
.github/actions/cora-review/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  deploy-website.yml  release.yml  security.yml
crates/trapfall-alert/: Cargo.toml
crates/trapfall-alert/src/: lib.rs
crates/trapfall-core/: Cargo.toml
crates/trapfall-core/src/: auth.rs  fingerprint.rs  lib.rs  store.rs
crates/trapfall-dashboard/: Cargo.toml
crates/trapfall-dashboard/src/: lib.rs
crates/trapfall-db/: Cargo.toml
crates/trapfall-db/migrations/postgres/: 001_initial.sql  002_alert_rules.sql  003_transactions.sql  004_release_health.sql  005_attachments.sql
crates/trapfall-db/src/: common.rs  error.rs  lib.rs  postgres.rs  sqlite.rs
crates/trapfall-db/tests/: common.rs  error_paths.rs  factory.rs  postgres_backend.rs  sqlite_backend.rs  testcontainers_postgres.rs
crates/trapfall-ingest/: Cargo.toml
crates/trapfall-ingest/src/: envelope.rs  lib.rs
crates/trapfall-mcp/: Cargo.toml
crates/trapfall-mcp/src/: lib.rs
crates/trapfall-mcp/tests/: mcp_test.rs
crates/trapfall-proto/: Cargo.toml
crates/trapfall-proto/src/: lib.rs
crates/trapfall-search/: Cargo.toml
crates/trapfall-search/src/: lib.rs
crates/trapfall-search/tests/: search_test.rs
crates/trapfalld/: Cargo.toml
crates/trapfalld/migrations/: 20260606000001_initial.sql  20260606000002_alert_rules.sql  20260608000001_drop_api_keys.sql  20260612000001_project_archive.sql  20260613000001_transactions.sql  20260627000001_release_health.sql  20260627000002_attachments.sql
crates/trapfalld/src/: alert.rs  attachment_storage.rs  auth.rs  config.rs  digest.rs  lib.rs  log_time.rs  main.rs  metrics.rs  migrate.rs  openapi.yaml  rate_limit.rs  retention.rs  server.rs  spa.rs  swagger.rs  ws.rs
crates/trapfalld/tests/: integration.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/guide/: alerts.md  api.md  cli.md  configuration.md  docker.md  getting-started.md  mcp.md  migration.md  multi-project.md  sdk-integration.md  search.md  vps-deployment.md
docs/public/: _redirects
web/: components.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
web/e2e/: auth.spec.ts  helpers.ts  issues.spec.ts  projects.spec.ts
web/src/: app.css
web/src/lib/: api.test.ts  api.ts  timezone.svelte.ts  timezone.test.ts  timezone.ts  utils.test.ts  utils.ts  ws.ts
web/src/lib/components/: AttachmentCard.svelte
web/src/lib/stores/: auth.svelte.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/(dashboard)/: +layout.svelte
web/src/routes/(dashboard)/issues/: +page.svelte
web/src/routes/(dashboard)/issues/[id]/: +page.svelte
web/src/routes/(dashboard)/issues/[issueId]/events/[eventId]/: +page.svelte
web/src/routes/(dashboard)/projects/: +page.svelte
web/src/routes/(dashboard)/release-health/: +page.svelte
web/src/routes/(dashboard)/rules/: +page.svelte
web/src/routes/(dashboard)/search/: +page.svelte
web/src/routes/(dashboard)/settings/: +page.svelte
web/src/routes/(dashboard)/transactions/: +page.svelte
web/src/routes/(dashboard)/transactions/[id]/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/setup/: +page.svelte
