[workspace]
resolver = "2"
members = [
    "crates/trapfall-proto",
    "crates/trapfall-db",
    "crates/trapfall-core",
    "crates/trapfall-ingest",
    "crates/trapfall-search",
    "crates/trapfall-alert",
    "crates/trapfall-mcp",
    "crates/trapfall-dashboard",
    "crates/trapfalld",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/codecoradev/trapfall"
rust-version = "1.86"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Database — base sqlx without a specific backend; crates opt-in via features.
sqlx = { version = "0.8", features = ["runtime-tokio"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = "0.1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Crypto
blake3 = "1"
argon2 = "0.5"

# Compression
flate2 = "1"

# Embed
mime_guess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP
serde_jsonrpc = "0.2"

# Errors
thiserror = "2"
anyhow = "1"

# Async trait
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Embedded SPA
rust-embed = { version = "8", features = ["include-exclude"] }

# Internal crates
trapfall_proto = { path = "crates/trapfall-proto" }
trapfall_db = { path = "crates/trapfall-db" }
trapfall_core = { path = "crates/trapfall-core" }
trapfall_ingest = { path = "crates/trapfall-ingest" }
trapfall_search = { path = "crates/trapfall-search" }
trapfall_alert = { path = "crates/trapfall-alert" }
trapfall_mcp = { path = "crates/trapfall-mcp" }
trapfall_dashboard = { path = "crates/trapfall-dashboard" }

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
