[package]
name = "trapfall_alert"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alerting rules engine — configurable triggers, webhooks"

[dependencies]
trapfall-proto = { workspace = true }
trapfall-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
