[package]
name = "trapfall_alert"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Alerting rules engine — configurable triggers, webhooks"

[dependencies]
trapfall_proto = { workspace = true }
trapfall_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
