[package]
name = "trapfall_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic — storage trait, config, auth, fingerprint"

[dependencies]
trapfall-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
