[package]
name = "trapfall_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core logic — storage trait, config, auth, fingerprint"

[dependencies]
trapfall_proto = { workspace = true }
trapfall_db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
argon2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true }
trapfall_db = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
