[package]
name = "trapfall_dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Frontend SPA — SvelteKit embedded dashboard"

[dependencies]
trapfall-proto = { workspace = true }
trapfall-core = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
