[package]
name = "trapfall_db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Database trait abstraction + backends (SQLite, Postgres)"

[dependencies]
trapfall_proto = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
