[package]
name = "trapfall_ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ingest pipeline — HTTP handler, envelope parser, digest loop"

[dependencies]
trapfall-proto = { workspace = true }
trapfall-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
