[package]
name = "trapfall_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server — stdio transport, AI agent tools"

[dependencies]
trapfall_proto = { workspace = true }
trapfall_core = { workspace = true }
trapfall_search = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
trapfall_core = { workspace = true }
trapfall_db = { workspace = true }
