[package]
name = "trapfall_proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wire types and protocol definitions for TrapFall"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
