[package]
name = "trapfall_search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Search module — LIKE + trigram substring matching"

[dependencies]
trapfall_proto = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
