[package]
name = "trapfall_search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Search module — LIKE + trigram substring matching"

[dependencies]
trapfall_proto = { workspace = true }
trapfall_core = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
trapfall_core = { workspace = true }
trapfall_db = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
