[package]
name = "trapfalld"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TrapFall daemon binary — ties all crates together"

[[bin]]
name = "trapfall"
path = "src/main.rs"

[dependencies]
trapfall-proto = { workspace = true }
trapfall-core = { workspace = true }
trapfall-ingest = { workspace = true }
trapfall-search = { workspace = true }
trapfall-alert = { workspace = true }
trapfall-mcp = { workspace = true }
trapfall-dashboard = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
