[package]
name = "trapfalld"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TrapFall daemon binary — ties all crates together"

[[bin]]
name = "trapfall"
path = "src/main.rs"

[dependencies]
trapfall_proto = { workspace = true }
trapfall_core = { workspace = true }
trapfall_ingest = { workspace = true }
trapfall_search = { workspace = true }
trapfall_alert = { workspace = true }
trapfall_mcp = { workspace = true }
trapfall_dashboard = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
http-body-util = "0.1"
reqwest = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
