[package]
name = "trapfalld"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TrapFall daemon binary — ties all crates together"

[[bin]]
name = "trapfall"
path = "src/main.rs"

[features]
default = ["sqlite"]
sqlite = ["trapfall_db/sqlite"]
postgres = ["trapfall_db/postgres"]

[dependencies]
trapfall_proto = { workspace = true }
trapfall_core = { workspace = true }
trapfall_db = { workspace = true }
trapfall_ingest = { workspace = true }
trapfall_search = { workspace = true }
trapfall_alert = { workspace = true }
trapfall_mcp = { workspace = true }
trapfall_dashboard = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
tracing = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
